--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "date-fns": "^2.19.0",
     "express": "^4.17.1",
+    "pg": "^8.5.1",
+    "typeorm": "^0.2.31",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
