--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.6.10",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.1",
     "@types/uuid": "^8.3.0",
