build: provider to send email through aws ses

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,5 +1,11 @@
+# Aplication
 APP_SECRET=
-
 APP_API_URL=http://localhost:3333
 APP_WEB_URL=http://localhost:3000
 
+# Mail
+MAIL_DRIVER=ses
+
+# AWS Credencials
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
