build(file): implementing upload files to aws s3

--- a/.env.exemple
+++ b/.env.exemple
@@ -4,7 +4,10 @@ APP_API_URL=http://localhost:3333
 APP_WEB_URL=http://localhost:3000
 
 # Mail
-MAIL_DRIVER=ses
+MAIL_DRIVER=ethereal
+
+# Storage
+STORAGE_DRIVER=disk
 
 # AWS Credencials
 AWS_ACCESS_KEY_ID=
