--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.5.2",
     "mongodb": "^3.6.5",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
@@ -37,6 +38,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mime": "^2.0.3",
     "@types/mongodb": "^3.6.10",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.1",
