--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
+    "ioredis": "^4.24.5",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.5.2",
     "mongodb": "^3.6.5",
@@ -36,6 +37,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/ioredis": "^4.22.2",
     "@types/jest": "^26.0.21",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mime": "^2.0.3",
