--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "pg": "^8.5.1",
+    "rate-limiter-flexible": "^2.2.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.31",
@@ -44,6 +46,7 @@
     "@types/mongodb": "^3.6.10",
     "@types/multer": "^1.4.5",
     "@types/nodemailer": "^6.4.1",
+    "@types/redis": "^2.8.28",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
