--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
         target: "~/app/gobarber-nodejs-api"
       
     # Install dependencies on Digital Ocean  
-    - name: Install dependencies on Digital Ocean
+    - name: Run production scripts
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SSH_HOST }}
@@ -58,25 +58,5 @@ jobs:
         script: |
           cd ~/app/gobarber-nodejs-api
           yarn
-      
-    # Run migrations on Digital Ocean
-    - name: Run migrations on Digital Ocean
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USER }}
-        port: ${{ secrets.SSH_PORT }}
-        key: ${{ secrets.SSH_KEY }}
-        script: |
-          cd ~/app/gobarber-nodejs-api
           ./node_modules/.bin/typeorm migrations:run
-      
-    # Restart project on Digital Ocean
-    - name: Restart project on Digital Ocean
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SSH_HOST }}
-        username: ${{ secrets.SSH_USER }}
-        port: ${{ secrets.SSH_PORT }}
-        key: ${{ secrets.SSH_KEY }}
-        script: pm2 restart gobarber-api        
+          pm2 restart gobarber-api
